syntax = "proto3";

package tutorial;

option java_package = "proto";
option java_outer_classname = "ElectionResponseMessage";

message ElectionResponseMessageDetails {
  uint32 messageSenderId = 1;
}